CSS: z-index fixed for modal window

--- a/css/bootstrap-admin-theme.css
+++ b/css/bootstrap-admin-theme.css
@@ -107,7 +107,7 @@ body.bootstrap-admin-with-small-navbar{
     box-shadow: initial;
     margin-bottom: 0;
     min-height: initial;
-    z-index: 1040;
+    z-index: 1030;
 }
 .bootstrap-admin-navbar-sm .navbar-collapse .navbar-nav:first-child{
     margin-left: -15px;
@@ -118,6 +118,7 @@ body.bootstrap-admin-with-small-navbar{
 }
 .bootstrap-admin-navbar-under-small{
     top: 25px;
+    z-index: 1020;
 }
 
 /** Side Bar **/
